tests/fixtures/invalid/not_gpx_root.gpx
<?xml version="1.0" encoding="UTF-8"?>
<notgpx xmlns="http://www.topografix.com/GPX/1/1" version="1.1" creator="Test">
  <wpt lat="52.5200" lon="13.4050">
    <name>Wrong root element</name>
  </wpt>
</notgpx>
